# alphakit

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  new_strategy.md
.github/workflows/: benchmark.yml  docs.yml  lint.yml  test.yml  verify-install.yml
_alphakit_meta/: __init__.py
adr/001-carry-data-deferred/: index.html
adr/002-proxy-suffix-convention/: index.html
adr/003-multi-feed-architecture/: index.html
adr/004-polygon-placeholder-adapter/: index.html
adr/005-synthetic-options-chain/: index.html
adr/006-feed-caching-strategy/: index.html
adr/007-rate-limit-coordination/: index.html
architecture/: index.html
benchmark_notes/: index.html
deviations/: index.html
docs/: architecture.md  benchmark_notes.md  deviations.md  index.md  phase-2-amendments.md  phase-2-master-plan.md  quickstart.md  strategy_contract.md
docs/adr/: 001-carry-data-deferred.md  002-proxy-suffix-convention.md  003-multi-feed-architecture.md  004-polygon-placeholder-adapter.md  005-synthetic-options-chain.md  006-feed-caching-strategy.md  007-rate-limit-coordination.md
docs/feeds/: cftc.md  eia.md  fred.md  overview.md  polygon.md  synthetic-options.md  yfinance-futures.md
docs/papers/: phase-2.bib  phase-2.md
docs/sessions/: 2f-closeout.md
feeds/cftc/: index.html
feeds/eia/: index.html
feeds/fred/: index.html
feeds/overview/: index.html
feeds/polygon/: index.html
feeds/synthetic-options/: index.html
feeds/yfinance-futures/: index.html
phase-2-amendments/: index.html
phase-2-master-plan/: index.html
quickstart/: index.html
scripts/: benchmark_all.py  install_from_git.ps1  install_from_git.sh
search/: search_index.json
strategy_contract/: index.html
tests/: test_readme_example.py
