[project]
# -------------------------------------------------------------------------
# WARNING: This root package is NOT pip-installable outside the uv workspace.
# It exists only for local development with `uv sync`. To install AlphaKit
# in a fresh environment, use the per-subpackage install script:
#   bash scripts/install_from_git.sh v0.1.1
# See README.md for details.
# -------------------------------------------------------------------------
name = "alphakit"
version = "0.1.0"
description = "The most comprehensive open-source quant strategy library."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Ankit Jha" }]
keywords = [
    "quant",
    "trading",
    "backtesting",
    "finance",
    "systematic",
    "alpha",
    "factor-investing",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering",
]
# These deps resolve via [tool.uv.sources] workspace mapping during `uv sync`.
# They are NOT resolvable by pip outside the workspace. This is intentional.
dependencies = [
    "alphakit-core",
    "alphakit-data",
    "alphakit-bridges",
    "alphakit-strategies-trend",
    "alphakit-strategies-meanrev",
    "alphakit-strategies-carry",
    "alphakit-strategies-value",
    "alphakit-strategies-volatility",
    "alphakit-bench",
]

[project.optional-dependencies]
trend = ["alphakit-strategies-trend"]
meanrev = ["alphakit-strategies-meanrev"]
carry = ["alphakit-strategies-carry"]
value = ["alphakit-strategies-value"]
volatility = ["alphakit-strategies-volatility"]
options = []
rates = []
commodity = []
macro = []
ml = ["scikit-learn>=1.3", "xgboost>=2.0", "lightgbm>=4.0"]
rl = ["gymnasium>=0.29", "stable-baselines3>=2.1"]
crypto = ["ccxt>=4.0"]
altdata = []
all = [
    "alphakit[trend,meanrev,carry,value,volatility,options,rates,commodity,macro,ml,rl,crypto,altdata]",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.10",
    "pandas-stubs>=2.2",
    "pre-commit>=3.7",
    "nbstripout>=0.7",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-jupyter>=0.24",
    "mkdocs-autorefs>=1.0",
]

[project.urls]
Homepage = "https://github.com/ankitjha67/alphakit"
Documentation = "https://ankitjha67.github.io/alphakit"
Repository = "https://github.com/ankitjha67/alphakit"
Issues = "https://github.com/ankitjha67/alphakit/issues"
Changelog = "https://github.com/ankitjha67/alphakit/blob/main/CHANGELOG.md"

# No [build-system] — this root is not a distributable package.
# Sub-packages under packages/ are independently buildable with hatchling.

# ---------------------------------------------------------------------------
# uv workspace
# ---------------------------------------------------------------------------
[tool.uv.workspace]
members = [
    "packages/alphakit-core",
    "packages/alphakit-data",
    "packages/alphakit-bridges",
    "packages/alphakit-strategies-trend",
    "packages/alphakit-strategies-meanrev",
    "packages/alphakit-strategies-carry",
    "packages/alphakit-strategies-value",
    "packages/alphakit-strategies-volatility",
    "packages/alphakit-bench",
]

[tool.uv.sources]
alphakit-core = { workspace = true }
alphakit-data = { workspace = true }
alphakit-bench = { workspace = true }
alphakit-bridges = { workspace = true }
alphakit-strategies-trend = { workspace = true }
alphakit-strategies-meanrev = { workspace = true }
alphakit-strategies-carry = { workspace = true }
alphakit-strategies-value = { workspace = true }
alphakit-strategies-volatility = { workspace = true }

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["notebooks", "site", "build"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "C4",  # comprehensions
    "UP",  # pyupgrade
    "SIM", # simplify
    "RUF", # ruff-specific
    "N",   # pep8-naming
    "TID", # tidy imports
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default arg (common in fastapi-style code)
    # Ambiguous-unicode warnings. AlphaKit uses typographical characters
    # ("×", "–", "−", "≈") in docstrings and comments by design; they
    # are not code and cannot be mistaken for operators.
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "N802"]
"**/__init__.py" = ["F401"]

# ---------------------------------------------------------------------------
# Black
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = false  # overrides below intentionally cover modules
                              # not imported in every mypy invocation
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
namespace_packages = true
explicit_package_bases = true
mypy_path = [
    "packages/alphakit-core",
    "packages/alphakit-data",
    "packages/alphakit-bridges",
    "packages/alphakit-strategies-trend",
    "packages/alphakit-strategies-meanrev",
    "packages/alphakit-strategies-carry",
    "packages/alphakit-strategies-value",
    "packages/alphakit-strategies-volatility",
    "packages/alphakit-bench",
]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# Untyped third-party libs — we still strict-check the bridge code itself.
[[tool.mypy.overrides]]
module = [
    "vectorbt",
    "vectorbt.*",
    "backtrader",
    "backtrader.*",
    "pandas_market_calendars",
    "pandas_market_calendars.*",
]
ignore_missing_imports = true
follow_imports = "skip"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests", "packages"]
# importlib avoids test-module name collisions across packages
# (e.g. packages/*/tests/test_foo.py vs tests/test_foo.py).
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--import-mode=importlib",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests requiring fixture data",
    "benchmark: benchmark regression tests",
    "network: tests that require network access",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["alphakit"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@overload",
]
fail_under = 85
show_missing = true
skip_covered = false
